--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,16 +525,20 @@ li.nav-item.active a{
 #ekstrakulikuler .row-2 {
     position: relative;
     top: 50%;
+    transform: translateY(-50%);
 }
+
+/* css untuk berita */ 
 
 .section-thumbnail {
     width: 100%;
     height: 237px;
     overflow: hidden;
+    position: relative;
 }
-
 .section-thumbnail img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -542,7 +546,7 @@ li.nav-item.active a{
     position: absolute;
     bottom: 10px;
     z-index: 10;
-    left: 30px;
+    left: 10px;
     background-color: #15477A;
     color: #F2C808;
     padding: 5px 10px;
@@ -554,7 +558,7 @@ li.nav-item.active a{
     padding: 0;
 }
 
-.section-thumbnail .tanggal span.tgl {
+.section-thumbnail .tanggal  span.tgl {
     display: block;
     font-size: 30px;
     font-weight: 700;
@@ -562,7 +566,13 @@ li.nav-item.active a{
 }
 
 .section-thumbnail .tanggal span.tgl-2 {
-   font-size: 10px;
+    font-size: 10px;
+}
+
+#berita .section-content h3 {
+    font-size: 16px;
+    font-weight: 600;
+    color: #15477A;
 }
 
 
